Fix alignment

--- a/src/public/page.pcss
+++ b/src/public/page.pcss
@@ -82,7 +82,12 @@ header {
 header > div {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   gap: var(--space--near);
+}
+
+header a {
+  display: inline-flex;
 }
 
 .posts {
